--- a/css/Tstyle.css
+++ b/css/Tstyle.css
@@ -5,47 +5,88 @@
   left: 0;
   top: auto;
   width: 100%;
-	height: 95;
-  background-color: white;
+	height: 70px;
+  background-color: #F9F9F9;
 }
 	.st0{fill:#F94151;}
 
 	.st2{font-family: 'Montserrat Black'}
 
-	.st3{position: absolute;top: 7%;left: 5%;font-size:3.5vw;}
+	.st3{position: absolute; top: 0;left: 5%;font-size:3vw;}
 
-	.st4{font-size:2.5vw;position:absolute;top: 37%;left: 5%;}
+	.st4{font-size:2vw;position:absolute;top: 35px;left: 5%;}
 
 	.st5{font-family: 'Montserrat ExtraBold', 'Montserrat Medium'}
 
 @media only screen and (max-width: 768px) {
  .st4{
-    top: 35%;
-	 left: 10%;
+    top: 25px;
+	 left: 8%;
   }
 }
 
 @media only screen and (max-width: 768px) {
 .st3{
-    top: 20%;left: 10%;
+    top: 5px;
+	left: 8%;
   }
 }
 
 .logo_header{
-	 width: 170px;
+	 width: 100px;
 	position: fixed; 
 	right: 0%; 
 	top: 1%;
 }
 
 .logo_img{
-	max-height: auto;
+	max-height: 60px;
 	max-width: 100%;
 	position: relative;
 	top: 1%;
 	right: 1%;
 }
 
+.sidebar {
+  height: 100%;
+  width: 160px;
+  position: fixed;
+  z-index: 1;
+  top: 60px;
+  left: 0;
+  background-color: transparent;
+  overflow-x: hidden;
+  padding-top: 16px;
+	background: url("../images/Svg/Navbar-01.svg") no-repeat;
+}
+.navbar_img{
+	max-height: auto;
+	max-width: 100%;
+	position: relative;
+	padding-top: 40%;
+	left:0;
+}
+.middel_icon{
+	position: absolute;
+	max-height: auto;
+	max-width: 50%;
+	top: 33%;
+	left:20%;	
+	}
+.top_icon{
+	position: absolute;
+	max-height: auto;
+	max-width: 30%;
+	top: 12.5%;
+	left:8%;	
+	}
+.bottom_icon{
+	position: absolute;
+	max-height: auto;
+	max-width: 20%;
+	top: 62.5%;
+	left:15%;	
+	}
 
 .footer{
   position: fixed;
