--- a/css/Tstyle.css
+++ b/css/Tstyle.css
@@ -14,7 +14,7 @@
 
 	.st3{position: absolute; top: 0;left: 5%;font-size:3vw;}
 
-	.st4{font-size:2vw;position:absolute;top: 35px;left: 5%;}
+	.st4{font-size:1.5vw;position:absolute;top: 40px;left: 5%;}
 
 	.st5{font-family: 'Montserrat ExtraBold', 'Montserrat Medium'}
 
@@ -87,6 +87,71 @@
 	top: 62.5%;
 	left:15%;	
 	}
+
+.day_date_container{
+	position: absolute;
+	top:80px;
+	left: 170px;
+	right:100px;
+	height: 100px;
+	background: url("../images/Svg/svg-day date-01.svg")no-repeat center;	
+}
+.day_text{
+	font-family:"Montserrat ExtraBold", "Montserrat Medium";
+	font-size: 5vw;
+	color: aliceblue;
+	position: absolute;
+	left: 26%;		
+}
+.month_text{
+	font-family:"Montserrat ExtraBold", "Montserrat Medium";
+	font-size: 4vw;
+	color: aliceblue;
+	position: absolute;
+	top:10%;
+	left: 43%;		
+}
+
+
+	
+/*position:absolute;
+	right:0;
+	bottom: 10%;
+	*/
+
+.img_container {
+	position: absolute;
+  width: 300px;
+	height: 330px;
+	right: 1%;
+	bottom: 10%;
+  background-color: white;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  
+
+}
+.img_size{
+	width:auto;
+	height: 330px;
+	
+}
+
+.button {
+  border: none;
+  color: #f94151;
+  position: absolute;
+	right: 8%;
+	bottom: 70%;
+ background-color: #fdfdfd;
+  text-align: center;
+   padding: 12px 16px;
+  font-size: 16px;
+  cursor: pointer;
+}
+.button:hover {
+  background-color: #4E4E4E;
+}
+
 
 .footer{
   position: fixed;
