--- a/css/Tstyle.css
+++ b/css/Tstyle.css
@@ -124,9 +124,9 @@
   width: 300px;
 	height: 330px;
 	right: 1%;
-	bottom: 10%;
+	bottom: 50px;
   background-color: white;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  box-shadow:0 -4px 8px 0 rgba(0, 0, 0, 0.2), 0 -6px 20px 0 rgba(0, 0, 0, 0.19);
   
 
 }
@@ -151,6 +151,26 @@
 .button:hover {
   background-color: #4E4E4E;
 }
+/*Table Style */
+.tg  {border-collapse:collapse;border-spacing:0;}
+.tg td{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
+  overflow:hidden;padding:10px 5px;word-break:normal;}
+.tg th{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
+  font-weight:normal;overflow:hidden;padding:10px 5px;word-break:normal;}
+.tg .tg-3mmv{background-color:#00b799;border-color:inherit;color:#ffffff;
+  font-family:"Lucida Console", Monaco, monospace !important;;font-size:16px;text-align:left;vertical-align:top}
+.tg .tg-k3br{background-color:#c0c0c0;border-color:inherit;color:#ffffff;
+  font-family:"Lucida Console", Monaco, monospace !important;;font-size:16px;text-align:left;vertical-align:top}
+.tg .tg-0pky{border-color:inherit;text-align:left;vertical-align:top}
+
+/*Table Container */
+.tablediv{
+	position: absolute;
+	top: 40%;
+	bottom:20%;
+	left:30%;
+	right:30%;
+}
 
 
 .footer{
@@ -158,7 +178,7 @@
   bottom: 0px;
   width: 100%;
   height: 100; 
-  background-color: white;
+  background-color: hsla(0,0%,0%,0.13);
   color: #333333;
   text-align: right;
 }
